package de.gravitex.trainmaster.dto;

import lombok.Data;

@Data
public class RailItemDTO implements ServerDTO {

	private String identifier;
}